# frost-bjj

./: .gitignore  Cargo.toml  README.md
frost-core/src/: frost.rs  signature.rs  signing_key.rs
frost-core/src/frost/: keys.rs
frost-core/src/frost/keys/: dkg.rs
frost-core/src/tests/: ciphersuite_generic.rs  repairable.rs
proptest-regressions/tests/: proptests.txt
src/: babyjubjub.rs  bjj_element.rs  lib.rs  tests.rs
src/keys/: dkg.rs  repairable.rs
src/tests/: batch.rs  coefficient_commitment.rs  deserialize.rs  ec_ops.rs  proptests.rs  vss_commitment.rs
tests/: common_traits_tests.rs  integration_tests.rs  recreation_tests.rs  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs
tests/helpers/: elements.json  repair-share.json  samples.json  samples.rs  vectors-big-identifier.json  vectors.json
tests/snapshots/: serialization_tests__check_signing_commitments_postcard_serialization.snap.new
