[package]
name = "frost-bjj"
version = "0.1.0"
edition = "2021"

[dependencies]
document-features = "0.2.7"
frost-core = "0.7.0"
rand_core = "0.6"
poseidon-rs = "0.0.10"
sha2 = "0.10.2"
elliptic-curve = { version = "0.13.8", features = [ "hash2curve" ]}

ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-crypto-primitives = { version = "0.4", features = ["sponge"] } 


[dev-dependencies]
criterion = "0.5"
frost-core = "0.7.0"
frost-rerandomized = { version = "0.7.0", features = ["test-impl"] }
insta = { version = "1.31.0", features = ["yaml"] }
hex = "0.4.3"
lazy_static = "1.4"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"
