[package]
name = "frost-bjj"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
document-features = "0.2.7"
frost-core = { path = "./frost-core", version = "0.7.0" }
rand_core = "0.6"
sha2 = "0.10.2"

ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"

[dev-dependencies]
criterion = "0.5"
frost-core = { path = "./frost-core", version = "0.7.0",  features = ["test-impl"] }
frost-rerandomized = { version = "0.7.0", features = ["test-impl"] }
insta = { version = "1.31.0", features = ["yaml"] }
hex = "0.4.3"
lazy_static = "1.4"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"

[features]
nightly = []
default = ["serialization"]
serialization = ["serde", "frost-core/serialization"]
#! ## Features
## Enable `serde` support for types that need to be communicated. You
## can use `serde` to serialize structs with any encoder that supports
## `serde` (e.g. JSON with `serde_json`).
serde = ["frost-core/serde"]